// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`公共组件引用 子组件内部标签引用公共组件时，解析 app.json 文件里公共组件，使子组件生效 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
  /wxProject/taroConvert/src/hello-plugin/index.js => module.exports = {
  sayHello: function () {
    console.log('Hello plugin!')
  },
}
,
}
`;

exports[`微信小程序转换 三方库转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`微信小程序转换 使用工具函数初始化 page 页面 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`微信小程序转换 同时使用插件和分包 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
  /wxProject/taroConvert/src/hello-plugin/index.js => module.exports = {
  sayHello: function () {
    console.log('Hello plugin!')
  },
}
,
}
`;

exports[`微信小程序转换 小程序 demo 转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`微信小程序转换 小程序 tabber 转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`微信小程序转换 小程序分包 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`微信小程序转换 小程序插件转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
  /wxProject/taroConvert/src/hello-plugin/index.js => module.exports = {
  sayHello: function () {
    console.log('Hello plugin!')
  },
}
,
}
`;

exports[`微信小程序转换 小程序自定义 tabber 转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`微信小程序转换 配置 miniprogramRoot 的 demo 小程序转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`文件转换 wxss 的注释中引用自身文件 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`文件转换 一个文件夹下有多个 wxml 页面导致显示异常 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`文件转换 文件中包含 commonjs 导出转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
  /wxProject/taroConvert/src/utils/util.js => const Taro = require('@tarojs/taro')
function getData(url) {
  Taro.request({
    url: 'url',
  })
}
module.exports.getData = getData
,
}
`;

exports[`模版转换 模版转换，模版名为变量 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`模版转换 模版转换，模版名包含变量 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`模版转换 简单模版转换，向模版中传递一个变量 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`模版转换 简单模版转换，向模版中传递多个变量 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
}
`;

exports[`配置文件解析转换 小程序 sitemap.json 文件的转换 1`] = `
Map {
  /wxProject/taroConvert/.convert => ,
  undefined => ,
  /wxProject/taroConvert/sitemap.json => 
        {
          "rules":[{
            "action": "allow",
            "page": "*"
          }]
        }
      ,
}
`;
